feat(acheevy): VS Code governance, ACHEEVY fonts, login page redesign
- Add VS Code governance system (CO-VSCE-001)
  - .aims/context.json for runtime context (tenant, job, actor)
  - scripts/aims-run.sh governed command gateway
  - ACP/UCP enforcement with budget limits
  - Audit logging for all editor actions

- Update fonts to DOTO, Permanent Marker, Caveat
  - Login page uses Permanent Marker for branding
  - Caveat for taglines, Doto for technical text

- Redesign login page with ACHEEVY aesthetic
  - Split-screen layout with hero image
  - Amber/gold color scheme
  - Fixed Google OAuth conditional rendering

- Add branding backend (M.I.M. preparation)
  - Branding models, routes, service
  - Migration for branding settings table

- Add documentation: docs/VSCODE_GOVERNANCE.md

--- a/backend/ii-agent/frontend/package.json
+++ b/backend/ii-agent/frontend/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "ii-agent",
+    "name": "acheevy",
     "version": "1.0.0",
-    "description": "II-Agent is an open-source intelligent assistant designed to streamline and enhance workflows across multiple domains. It represents a significant advancement in how we interact with technology—shifting from passive tools to intelligent systems capable of independently executing complex tasks.",
+    "description": "ACHEEVY is A.I.M.S.'s intelligent assistant designed to streamline and enhance workflows across multiple domains. It represents a significant advancement in how we interact with technology—shifting from passive tools to intelligent systems capable of independently executing complex tasks.",
     "keywords": [
         "agent",
         "ai"
