--- a/backend/uef-gateway/package.json
+++ b/backend/uef-gateway/package.json
@@ -22,10 +22,12 @@
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.0.0",
     "pino": "^10.3.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
+    "@types/ws": "^8.5.10",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-rate-limit": "^5.1.3",
