--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,23 +10,40 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^3.0.25",
+    "@deepgram/sdk": "^3.9.0",
+    "@e2b/sdk": "^1.0.6",
+    "@google/generative-ai": "^0.21.0",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
     "ai": "^3.0.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^10.16.16",
+    "groq-sdk": "^0.8.0",
     "highlight.js": "^11.9.0",
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
     "remark-gfm": "^4.0.0",
-    "uuid": "^9.0.1"
+    "remotion": "^4.0.0",
+    "resend": "^4.1.2",
+    "stripe": "^14.14.0",
+    "tailwind-merge": "^2.2.1",
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@remotion/cli": "^4.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
