--- a/infra/docker-compose.prod.yml
+++ b/infra/docker-compose.prod.yml
@@ -32,7 +32,7 @@ services:
       uef-gateway:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://127.0.0.1:80/health"]
+      test: ["CMD-SHELL", "curl -sf http://127.0.0.1:80/ || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
