feat: implement Chain of Command + Persona System (canonical spec)
Chain of Command (inviolable delegation law):
  User <-> ACHEEVY only (external voice rule)
  ACHEEVY -> Boomer_Ang(s) -> Chicken_Hawk -> Lil_<Role>_Hawk(s)
  Upward reporting reverses the chain; escalation on gate failures

Role Cards (18 total, JSON schema v1.0.0):
  - ACHEEVY (Executive Orchestrator)
  - Forge_Ang, Betty-Ann_Ang, AVVA-NOON_Ang (Boomer_Ang supervisors)
  - Chicken_Hawk (Execution Supervisor)
  - 12 Lil_Hawks: Messenger, Intake_Scribe, Proofrunner,
    Chain_Of_Custody, Attestation, Workflow_Smith,
    Webhook_Ferryman, Build_Surgeon, Deploy_Handler,
    Policy_Sentinel, Secret_Keeper, Interface_Forge, Motion_Tuner

Enforcement Policies:
  - chain-of-command.policy.json: deny rules, no-proof-no-done,
    budget governance, safety/privacy rules
  - overlay-snippet.policy.json: visibility modes, frequency limits,
    snippet format, personalization rules
  - handle-rules.json: canonical regex patterns + bench levels

Runtime Engine (engine.ts):
  - validateHandle(), validateRoleCard()
  - evaluateRoute() with deny rule matching
  - authorizeAction(), authorizeTool()
  - checkEvidenceGate(), checkBudgetGate()
  - produceOverlayEvent(), formatOverlaySnippet()
  - scanForUnsafeContent() (secrets, JWTs, keys)
  - RoleCardRegistry class with full lifecycle

Integration:
  - ChainOfCommandHook wired into hook system (priority 100)
  - Types exported from aims-skills/types/chain-of-command.ts
  - createRegistry() factory for one-line initialization
  - Updated pmo-naming.skill.ts: Betty-Ann_Ang fix + AVVA-NOON_Ang
  - Fixed pre-existing TS errors in hooks/skills/tests (0 errors)

--- a/aims-skills/tsconfig.json
+++ b/aims-skills/tsconfig.json
@@ -28,6 +28,7 @@
         "skills/**/*",
         "hooks/**/*",
         "luc/**/*",
+        "chain-of-command/**/*",
         "scripts/**/*",
         "tests/**/*"
     ],
