--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "discord-interactions": "^4.4.0",
     "framer-motion": "^10.16.16",
     "groq-sdk": "^0.8.0",
     "highlight.js": "^11.9.0",
