--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build & Deploy to Cloud Run
+name: Build & Deploy to GCP Cloud Run
 
 on:
   push:
@@ -9,34 +9,19 @@ concurrency:
   group: deploy-production
   cancel-in-progress: false
 
+env:
+  PROJECT_ID: ai-managed-services
+  REGION: us-central1
+  REPO: aims-docker
+
 jobs:
-  build-check:
-    name: Build Check
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: npm
-          cache-dependency-path: frontend/package-lock.json
-
-      - name: Install frontend dependencies
-        run: cd frontend && npm ci
-
-      - name: Build frontend
-        run: cd frontend && npm run build
-        env:
-          NEXT_TELEMETRY_DISABLED: 1
-
   deploy:
     name: Deploy to Cloud Run
-    needs: build-check
     runs-on: ubuntu-latest
     permissions:
       contents: read
       id-token: write
+
     steps:
       - uses: actions/checkout@v4
 
@@ -53,5 +38,6 @@ jobs:
         run: |
           gcloud builds submit \
             --config=cloudbuild.yaml \
+            --project=${{ vars.GCP_PROJECT || 'ai-managed-services' }} \
             --substitutions=SHORT_SHA=$(git rev-parse --short HEAD) \
-            --project=${{ vars.GCP_PROJECT || 'ai-managed-services' }}
+            --timeout=1200s
