fix: nginx healthcheck uses /health endpoint; fix certbot entrypoint override in deploy.sh
- nginx healthcheck: /health (VPS gateway) instead of / (Cloud Run 403)
- deploy.sh: add --entrypoint '' to certbot run commands to prevent
  infinite renewal-loop entrypoint from blocking cert existence checks

--- a/infra/docker-compose.prod.yml
+++ b/infra/docker-compose.prod.yml
@@ -32,7 +32,7 @@ services:
       uef-gateway:
         condition: service_started
     healthcheck:
-      test: ["CMD-SHELL", "curl -sf http://127.0.0.1:80/ || exit 1"]
+      test: ["CMD-SHELL", "curl -sf http://127.0.0.1:80/health || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 5
