revert: restore host certbot infrastructure (PR #79 incorrectly killed it)
PR #79 merged commit 62cef80 which removed all certbot/ACME infrastructure
based on the wrong assumption that Hostinger hPanel manages SSL. In reality,
SSL is managed by host certbot (apt) with Let's Encrypt.

Restored from c871910 (last known-good commit):
- nginx.conf: all 3 ACME challenge locations
- docker-compose.prod.yml: /var/www/certbot volume mount
- certbot.tool.md: restored (was deleted)
- tools/index.ts: certbot export restored
- CLAUDE.md: host certbot, NOT hPanel
- AIMS_PLAN.md: host certbot, NOT hPanel
- ssl-diagnostic.sh: host certbot references
- ssl.conf.template + ssl-landing.conf.template: host certbot comments

--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -85,12 +85,17 @@ http {
 
     # -------------------------------------------------------------------------
     # HTTP server (port 80)
-    # SSL managed by Hostinger hPanel. Certs at /etc/letsencrypt on host,
-    # bind-mounted read-only into the nginx container.
+    # Serves Let's Encrypt ACME challenges. Once certs exist, redirects
+    # all other traffic to HTTPS. Before certs, serves directly.
     # -------------------------------------------------------------------------
     server {
         listen 80;
         server_name _;
+
+        # Let's Encrypt ACME challenge — always HTTP
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
 
         # Health check — always available over HTTP for Docker probes
         location = /health {
@@ -183,6 +188,11 @@ http {
         listen 80;
         server_name demo.plugmein.cloud;
 
+        # Let's Encrypt ACME challenge
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
         # Health check
         location = /health {
             proxy_pass http://demo_frontend/api/health;
@@ -230,11 +240,17 @@ http {
 
     # -------------------------------------------------------------------------
     # Landing HTTP server (port 80) — aimanagedsolutions.cloud
-    # The "father site" — brand home. Redirects to HTTPS when SSL active.
+    # The "father site" — brand home. Redirects to HTTPS (SSL active).
+    # ACME challenges still served over HTTP for cert renewal.
     # -------------------------------------------------------------------------
     server {
         listen 80;
         server_name aimanagedsolutions.cloud www.aimanagedsolutions.cloud;
+
+        # Let's Encrypt ACME challenge — must stay HTTP
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
 
         # Health check — always available over HTTP for Docker probes
         location = /health {
@@ -250,11 +266,11 @@ http {
     }
 
     # -------------------------------------------------------------------------
-    # HTTPS servers (port 443) — activated by deploy.sh when certs exist
+    # HTTPS servers (port 443) — activated by deploy script after cert issue
     # deploy.sh writes ssl.conf (plugmein.cloud) and ssl-landing.conf
-    # (aimanagedsolutions.cloud) into /etc/nginx/conf.d/.
-    # Certs managed by Hostinger hPanel at /etc/letsencrypt on host,
-    # bind-mounted read-only into this container.
+    # (aimanagedsolutions.cloud) into /etc/nginx/conf.d/ after cert issuance.
+    # Certs are managed by certbot on the HOST (not in a container) and
+    # bind-mounted into this container at /etc/letsencrypt.
     # -------------------------------------------------------------------------
     include /etc/nginx/conf.d/*.conf;
 }
