config: add TWELVELABS_API_KEY to env.production.example

--- a/infra/.env.production.example
+++ b/infra/.env.production.example
@@ -148,3 +148,6 @@ N8N_WEBHOOK_URL=http://n8n:5678
 # Agent Zero / AVVA NOON
 # -----------------------------------------------------------------------------
 ENABLE_AGENT_ZERO=true
+
+# Twelve Labs — Video AI (Per|Form Film Room)
+TWELVELABS_API_KEY=
