fix: ii-agent stability + wire Stripe/PayPal/Resend env vars
- ii-agent: alembic upgrade 'head' -> 'heads' (multiple migration branches)
- ii-agent: add LocalStorage provider (avoids GCS credentials requirement)
- ii-agent: rename metadata -> extra_metadata (SQLAlchemy reserved attr)
- compose: add STRIPE_PRICE_ID, PAYPAL_CLIENT_ID/SECRET to frontend/gateway/acheevy
- aims-skills: add jest.setup.js for dotenv loading in tests

--- a/infra/docker-compose.prod.yml
+++ b/infra/docker-compose.prod.yml
@@ -68,6 +68,10 @@ services:
       - STRIPE_PUBLISHABLE_KEY=${STRIPE_PUBLISHABLE_KEY}
       - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY}
       - STRIPE_WEBHOOK_SECRET=${STRIPE_WEBHOOK_SECRET}
+      - STRIPE_PRICE_ID=${STRIPE_PRICE_ID}
+      # PayPal — payments
+      - PAYPAL_CLIENT_ID=${PAYPAL_CLIENT_ID}
+      - PAYPAL_CLIENT_SECRET=${PAYPAL_CLIENT_SECRET}
       # Voice — ElevenLabs (TTS + STT Scribe v2) + Deepgram (fallback)
       - ELEVENLABS_API_KEY=${ELEVENLABS_API_KEY}
       - DEEPGRAM_API_KEY=${DEEPGRAM_API_KEY}
@@ -199,6 +203,10 @@ services:
       - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
       # Stripe (gateway validates billing)
       - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY}
+      - STRIPE_PRICE_ID=${STRIPE_PRICE_ID}
+      # PayPal
+      - PAYPAL_CLIENT_ID=${PAYPAL_CLIENT_ID}
+      - PAYPAL_CLIENT_SECRET=${PAYPAL_CLIENT_SECRET}
       - DEBUG=false
     volumes:
       - gateway-data:/app/data
@@ -265,6 +273,9 @@ services:
       - REDIS_URL=redis://:${REDIS_PASSWORD:-aims_redis_secret}@redis:6379
       - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY}
       - STRIPE_WEBHOOK_SECRET=${STRIPE_WEBHOOK_SECRET}
+      - STRIPE_PRICE_ID=${STRIPE_PRICE_ID}
+      - PAYPAL_CLIENT_ID=${PAYPAL_CLIENT_ID}
+      - PAYPAL_CLIENT_SECRET=${PAYPAL_CLIENT_SECRET}
     depends_on:
       redis:
         condition: service_healthy
