--- a/aims-skills/package.json
+++ b/aims-skills/package.json
@@ -39,6 +39,9 @@
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
+    "setupFiles": [
+      "<rootDir>/jest.setup.js"
+    ],
     "roots": [
       "<rootDir>/tests"
     ],
