ci: disable Cloud Build trigger on push to main
VPS builds images locally via deploy.sh — no need for GCP Cloud Build.
Workflow kept as manual-only (workflow_dispatch) if ever needed.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,10 @@
-name: CI — Build & Push Images
+name: CI — Build & Push Images (DISABLED)
 
+# Cloud Build disabled — VPS builds images locally via deploy.sh
+# To re-enable, uncomment the push trigger below
 on:
-  push:
-    branches: [main]
+  # push:
+  #   branches: [main]
   workflow_dispatch:
 
 concurrency:
