--- a/backend/house-of-ang/Dockerfile
+++ b/backend/house-of-ang/Dockerfile
@@ -2,9 +2,10 @@ FROM node:20-alpine
 
 WORKDIR /app
 COPY package*.json ./
-RUN npm install --omit=dev
+RUN npm install
 COPY . .
 RUN npm run build
+RUN npm prune --omit=dev
 
 # Run as non-root user for security
 RUN addgroup -g 1001 -S appuser && \
