--- a/infra/docker-compose.gridiron.yml
+++ b/infra/docker-compose.gridiron.yml
@@ -86,7 +86,7 @@ services:
     environment:
       - PORT=5002
       - NODE_ENV=production
-      - GCP_PROJECT_ID=${GCP_PROJECT_ID:-ai-managed-services}
+      - GCP_PROJECT_ID=${GCP_PROJECT_ID:-aims-aimanagedsolutions}
       - GCP_REGION=${GCP_REGION:-us-central1}
       - VERTEX_ENDPOINT_ID=${VERTEX_SAM2_ENDPOINT_ID}
       - GOOGLE_APPLICATION_CREDENTIALS=/secrets/gcp-sa.json
