fix: Google OAuth compliance — privacy policy, homepage branding, Firebase project
- Add dedicated /privacy-policy page (required by Google OAuth verification)
- Update homepage with exact app name 'A.I.M.S. AI Managed Solutions' and purpose statement
- Add above-fold privacy policy link on homepage
- Update nav/footer privacy links to point to /privacy-policy
- Switch .firebaserc default project from ai-managed-services to aims-15ecc
- Add CORS_ORIGIN and NEXTAUTH_URL to env.production.example

--- a/infra/.env.production.example
+++ b/infra/.env.production.example
@@ -178,6 +178,9 @@ TELEGRAM_BOT_TOKEN=
 # -----------------------------------------------------------------------------
 REDIS_PASSWORD=change-this-to-a-strong-password
 
+# n8n Admin UI Basic Auth
+N8N_AUTH_PASSWORD=change-this-to-a-strong-password
+
 # -----------------------------------------------------------------------------
 # Cloudflare (DNS, R2, Workers)
 # -----------------------------------------------------------------------------
